--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -15,6 +15,258 @@
    "source": [
     "file_path = \"farmers-protest-tweets-2021-2-4.json\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Las top 10 fechas donde hay más tweets. Mencionar el usuario (username) que más publicaciones tiene por cada uno de esos días.\n",
+    "\n",
+    "## **q1_time.py**\n",
+    "\n",
+    "## Resultado Tiempo **q1_time.py**\n",
+    "```bash\n",
+    "py-spy top -- python q1_time.py 'C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json'  \n",
+    "\n",
+    "\n",
+    "Collecting samples from '\"python\" q1_time.py C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json' (python v3.8.10)\n",
+    "Total Samples 1900\n",
+    "GIL: 0.00%, Active: 100.00%, Threads: 1\n",
+    "\n",
+    "  %Own   %Total  OwnTime  TotalTime  Function (filename)\n",
+    "  0.00%   0.00%    5.55s     6.52s   _parse (pandas\\io\\json\\_json.py)\n",
+    "  1.00%   1.00%    2.80s     2.80s   trace_memory_usage (memory_profiler.py)\n",
+    "  0.00%   0.00%    2.36s     3.75s   <dictcomp> (pandas\\io\\json\\_normalize.py)\n",
+    "  0.00%   0.00%    1.07s     6.10s   _normalise_json_ordered (pandas\\io\\json\\_normalize.py)\n",
+    "  6.00%   6.00%   0.560s     1.14s   _list_of_dict_to_arrays (pandas\\core\\internals\\construction.py)\n",
+    "  0.00%   0.00%   0.490s    0.810s   _normalise_json (pandas\\io\\json\\_normalize.py)\n",
+    "  0.00%   0.00%   0.460s    0.570s   _preprocess_data (pandas\\io\\json\\_json.py)\n",
+    "  0.00%   0.00%   0.390s     6.81s   _simple_json_normalize (pandas\\io\\json\\_normalize.py)\n",
+    "  0.00%   0.00%   0.370s     8.38s   read (pandas\\io\\json\\_json.py)\n",
+    " 22.00%  22.00%   0.320s    0.340s   convert (pandas\\core\\internals\\construction.py)\n",
+    "  0.00%   0.00%   0.320s    0.710s   _combine_lines (pandas\\io\\json\\_json.py)\n",
+    "  5.00%   8.00%   0.290s    0.420s   _merge_blocks (pandas\\core\\internals\\managers.py)\n",
+    "  0.00%   0.00%   0.250s    0.250s   get_data (<frozen importlib._bootstrap_external>)\n",
+    "  0.00%   0.00%   0.250s    0.340s   <genexpr> (pandas\\io\\json\\_json.py)\n",
+    "  6.00%   6.00%   0.240s    0.240s   _stack_arrays (pandas\\core\\internals\\managers.py)\n",
+    "  0.00%   0.00%   0.230s    0.370s   <genexpr> (pandas\\core\\internals\\construction.py)\n",
+    "  0.00%   0.00%   0.220s    0.260s   _to_datetime_with_unit (pandas\\core\\tools\\datetimes.py)\n",
+    "```\n",
+    "\n",
+    "## Resultado Memoria **q1_time.py**\n",
+    "```bash\n",
+    "\n",
+    "```\n",
+    "\n",
+    "## **q1_memory.py**\n",
+    "\n",
+    "## Resultado Tiempo **q1_memory.py**\n",
+    "```bash\n",
+    "\n",
+    "```\n",
+    "\n",
+    "## Resultado Memoria **q1_memory.py**\n",
+    "```bash\n",
+    "\n",
+    "```\n",
+    "\n",
+    "# 2. Los top 10 emojis más usados con su respectivo conteo.\n",
+    "\n",
+    "## **q2_time.py**\n",
+    "\n",
+    "## Resultado Tiempo **q2_time.py**\n",
+    "\n",
+    "```bash\n",
+    "py-spy top -- python q2_time.py 'C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json'\n",
+    "\n",
+    "\n",
+    "Collecting samples from '\"python\" q2_time.py C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json' (python v3.8.10)\n",
+    "Total Samples 2300\n",
+    "GIL: 0.00%, Active: 100.00%, Threads: 1\n",
+    "\n",
+    "  %Own   %Total  OwnTime  TotalTime  Function (filename)\n",
+    "  # Se está mostrando sólo la línea del tiempo de ejecución del programa\n",
+    "  2.00%  100.00%   0.120s    26.24s   q2_time (q2_time.py)\n",
+    "```\n",
+    "\n",
+    "\n",
+    "## Resultado Memoria **q2_time.py**\n",
+    "\n",
+    "```bash\n",
+    "python -m memory_profiler q2_time.py 'C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json'  \n",
+    "Filename: q2_time.py\n",
+    "\n",
+    "Line #    Mem usage    Increment  Occurrences   Line Contents\n",
+    "=============================================================\n",
+    "     7     86.6 MiB     86.6 MiB           1   @profile\n",
+    "     8                                         def q2_time(file_path: str) -> List[Tuple[str, int]]:\n",
+    "     9                                             # Leer el alrchivo y convertirlo a Dataframe\n",
+    "    10   1545.7 MiB   1459.1 MiB           1       df = pd.read_json(file_path, lines=True)\n",
+    "    11\n",
+    "    12                                             # Inicializar un diccionario que se encargará de contar los emoticons dentro del contenido\n",
+    "    13   1545.7 MiB      0.0 MiB           1       cont_emojis = {}\n",
+    "    14   1546.7 MiB  -8010.2 MiB      117408       for content in df['content']:\n",
+    "    15                                                 # Se obtienen los diferentes emojis que se encuentren en el contenido\n",
+    "    16   1546.7 MiB  -8009.1 MiB      117407           emojis = emoji.distinct_emoji_list(content)\n",
+    "    17                                                 # Se recorren los emojis encontrados\n",
+    "    18   1546.7 MiB  -9827.7 MiB      144077           for emoj in emojis:\n",
+    "    19                                                     #Se cuenta el array en caso de que ya exista, sino se inicializa en 1\n",
+    "    20   1546.7 MiB  -1817.5 MiB       26670               if emoj in cont_emojis:\n",
+    "    21   1546.7 MiB  -1776.5 MiB       25800                   cont_emojis[emoj] += 1\n",
+    "    22                                                     else:\n",
+    "    23   1546.7 MiB    -41.0 MiB         870                   cont_emojis[emoj] = 1\n",
+    "    24\n",
+    "    25                                             # Convierte el diccionario en un Dataframe\n",
+    "    26   1546.7 MiB     -0.1 MiB           1       emojis_df = pd.DataFrame(list(cont_emojis.items()), columns=['Emoji', 'Cant'])\n",
+    "    27\n",
+    "    28                                             # Se ordena el dataframe por Cantidad de Mayor a Menor y se obtienen los primeros 10\n",
+    "    29   1546.8 MiB      0.1 MiB           1       top_emojis = emojis_df.sort_values(by='Cant', ascending=False).head(10)\n",
+    "    30\n",
+    "    31                                             # Retorna el resultado correspondiente\n",
+    "    32   1546.8 MiB      0.0 MiB           1       return top_emojis.values.tolist()\n",
+    "```\n",
+    "\n",
+    "## **q2_memory.py**\n",
+    "\n",
+    "## Resultado Tiempo **q2_memory.py**\n",
+    "\n",
+    "```bash\n",
+    "py-spy top -- python q2_memory.py 'C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json'     \n",
+    "\n",
+    "\n",
+    "Collecting samples from '\"python\" q2_memory.py C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json' (python v3.8.10)\n",
+    "Total Samples 2900\n",
+    "GIL: 0.00%, Active: 100.00%, Threads: 1\n",
+    "\n",
+    "  %Own   %Total  OwnTime  TotalTime  Function (filename)\n",
+    "  # Se está mostrando sólo la línea del tiempo de ejecución del programa\n",
+    "  0.00% 100.00%   0.440s    28.40s   q2_memory (q2_memory.py)\n",
+    "```\n",
+    "\n",
+    "## Resultado Memoria **q2_memory.py**\n",
+    "\n",
+    "```bash\n",
+    "python -m memory_profiler q2_memory.py 'C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json'\n",
+    "Filename: q2_memory.py\n",
+    "\n",
+    "Line #    Mem usage    Increment  Occurrences   Line Contents\n",
+    "=============================================================\n",
+    "     7     86.6 MiB     86.6 MiB           1   @profile\n",
+    "     8                                         def q2_memory(file_path: str) -> List[Tuple[str, int]]:\n",
+    "     9                                             # Leer el alrchivo y convertirlo a Dataframe\n",
+    "    10     86.6 MiB      0.0 MiB           1       df = pd.read_json(file_path, lines=True, chunksize=100)\n",
+    "    11\n",
+    "    12     86.6 MiB      0.0 MiB           1       cont_emojis = {}\n",
+    "    13     95.2 MiB  -1340.6 MiB        1176       for chunk in df:\n",
+    "    14     95.2 MiB -135968.7 MiB      118582           for content in chunk['content']:\n",
+    "    15                                                     # Se obtienen los diferentes emojis que se encuentren en el contenido\n",
+    "    16     95.2 MiB -134619.6 MiB      117407               emojis = emoji.distinct_emoji_list(content)\n",
+    "    17                                                     # Se recorren los emojis encontrados\n",
+    "    18     95.2 MiB -164654.7 MiB      144077               for emoj in emojis:\n",
+    "    19                                                         #Se cuenta el array en caso de que ya exista, sino se inicializa en 1\n",
+    "    20     95.2 MiB -30071.0 MiB       26670                   if emoj in cont_emojis:\n",
+    "    21     95.2 MiB -29290.6 MiB       25800                       cont_emojis[emoj] += 1\n",
+    "    22                                                         else:\n",
+    "    23     94.9 MiB   -781.7 MiB         870                       cont_emojis[emoj] = 1\n",
+    "    24\n",
+    "    25                                             # Convierte el diccionario en un Dataframe\n",
+    "    26     93.8 MiB     -1.4 MiB           1       emojis_df = pd.DataFrame(list(cont_emojis.items()), columns=['Emoji', 'Cant'])\n",
+    "    27\n",
+    "    28                                             # Se ordena el dataframe por Cantidad de Mayor a Menor y se obtienen los primeros 10\n",
+    "    29     93.9 MiB      0.0 MiB           1       top_emojis = emojis_df.sort_values(by='Cant', ascending=False).head(10)\n",
+    "    30\n",
+    "    31                                             # Retorna el resultado correspondiente\n",
+    "    32     93.9 MiB      0.0 MiB           1       return top_emojis.values.tolist()\n",
+    "```\n",
+    "\n",
+    "\n",
+    "# 3. El top 10 histórico de usuarios (username) más influyentes en función del conteo de las menciones (@) que registra cada uno de ellos.\n",
+    "\n",
+    "## **q3_time.py**\n",
+    "\n",
+    "## Resultado Tiempo **q3_time.py**\n",
+    "\n",
+    "```bash\n",
+    "py-spy top -- python q3_time.py 'C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json'                    \n",
+    "       \n",
+    "\n",
+    "Collecting samples from '\"python\" q3_time.py C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json' (python v3.8.10)\n",
+    "Total Samples 2300\n",
+    "GIL: 0.00%, Active: 100.00%, Threads: 1\n",
+    "\n",
+    "  %Own   %Total  OwnTime  TotalTime  Function (filename)\n",
+    "  # Se está mostrando sólo la línea del tiempo de ejecución del programa\n",
+    "  4.00% 100.00%   0.610s    21.78s   q3_time (q3_time.py)\n",
+    "```\n",
+    "\n",
+    "## Resultado Memoria **q3_time.py**\n",
+    "\n",
+    "```bash\n",
+    "python -m memory_profiler q3_time.py 'C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json'               \n",
+    "Filename: q3_time.py                             \n",
+    "\n",
+    "Line #    Mem usage    Increment  Occurrences   Line Contents\n",
+    "=============================================================\n",
+    "     6     76.8 MiB     76.8 MiB           1   @profile\n",
+    "     7                                         def q3_time(file_path: str) -> List[Tuple[str, int]]:\n",
+    "     8                                             # Leer el alrchivo y convertirlo a Dataframe\n",
+    "     9   1533.5 MiB   1456.7 MiB           1       df = pd.read_json(file_path, lines=True)\n",
+    "    10\n",
+    "    11   1533.5 MiB      0.0 MiB           1       lista_usuarios = {}\n",
+    "    12   1534.6 MiB      0.0 MiB      117408       for list_users in df['mentionedUsers']:\n",
+    "    13   1534.6 MiB      0.0 MiB      117407           if list_users is not None:\n",
+    "    14   1534.6 MiB      0.0 MiB      141437               for user in list_users:\n",
+    "    15   1534.6 MiB      0.0 MiB      103403                   if user['username'] in lista_usuarios:\n",
+    "    16   1534.6 MiB      0.0 MiB       88164                       lista_usuarios[user['username']] += 1\n",
+    "    17                                                         else:\n",
+    "    18   1534.6 MiB      1.0 MiB       15239                       lista_usuarios[user['username']] = 1\n",
+    "    19\n",
+    "    20   1534.8 MiB      0.2 MiB       30479       return sorted(lista_usuarios.items(), key=lambda item: item[1], reverse=True)[:10]\n",
+    "```\n",
+    "\n",
+    "## **q3_memory.py**\n",
+    "\n",
+    "## Resultado Tiempo **q3_memory.py**\n",
+    "\n",
+    "```bash\n",
+    "py-spy top -- python q3_memory.py 'C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json'   \n",
+    "\n",
+    "\n",
+    "Collecting samples from '\"python\" q3_memory.py C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json' (python v3.8.10)\n",
+    "Total Samples 7400\n",
+    "GIL: 0.00%, Active: 100.00%, Threads: 1\n",
+    "\n",
+    "  %Own   %Total  OwnTime  TotalTime  Function (filename)\n",
+    "  # Se está mostrando sólo la línea del tiempo de ejecución del programa\n",
+    "  2.00% 100.00%    1.22s    72.40s   q3_memory (q3_memory.py)\n",
+    "```\n",
+    "\n",
+    "## Resultado Memoria **q3_memory.py**\n",
+    "\n",
+    "```bash\n",
+    "python -m memory_profiler q3_memory.py 'C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json'\n",
+    "Filename: q3_memory.py\n",
+    "\n",
+    "Line #    Mem usage    Increment  Occurrences   Line Contents\n",
+    "=============================================================\n",
+    "     6     76.8 MiB     76.8 MiB           1   @profile\n",
+    "     7                                         def q3_memory(file_path: str) -> List[Tuple[str, int]]:\n",
+    "     8                                             # Leer el alrchivo y convertirlo a Dataframe\n",
+    "     9     76.8 MiB      0.1 MiB           1       df = pd.read_json(file_path, lines=True, chunksize=100)\n",
+    "    10\n",
+    "    11     76.8 MiB      0.0 MiB           1       lista_usuarios = {}\n",
+    "    12     86.1 MiB  -1459.6 MiB        1176       for chunk in df:\n",
+    "    13     86.1 MiB -148169.0 MiB      118582           for list_users in chunk['mentionedUsers']:\n",
+    "    14     86.1 MiB -146701.4 MiB      117407               if list_users is not None:\n",
+    "    15     86.1 MiB -177057.3 MiB      141437                   for user in list_users:\n",
+    "    16     86.1 MiB -129199.2 MiB      103403                       if user['username'] in lista_usuarios:\n",
+    "    17     86.1 MiB -110815.9 MiB       88164                           lista_usuarios[user['username']] += 1\n",
+    "    18                                                             else:\n",
+    "    19     86.1 MiB -18382.8 MiB       15239                           lista_usuarios[user['username']] = 1\n",
+    "    20\n",
+    "    21     85.4 MiB     -0.8 MiB       30479       return sorted(lista_usuarios.items(), key=lambda item: item[1], reverse=True)[:10]\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
