Se han realizado unas correcciones menores, eliminando data comentada y completando la información del ipynb

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -26,48 +26,118 @@
     "\n",
     "## Resultado Tiempo **q1_time.py**\n",
     "```bash\n",
-    "py-spy top -- python q1_time.py 'C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json'  \n",
+    "py-spy top -- python q1_time.py 'C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json'       \n",
     "\n",
     "\n",
     "Collecting samples from '\"python\" q1_time.py C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json' (python v3.8.10)\n",
-    "Total Samples 1900\n",
+    "Total Samples 1300\n",
     "GIL: 0.00%, Active: 100.00%, Threads: 1\n",
     "\n",
     "  %Own   %Total  OwnTime  TotalTime  Function (filename)\n",
-    "  0.00%   0.00%    5.55s     6.52s   _parse (pandas\\io\\json\\_json.py)\n",
-    "  1.00%   1.00%    2.80s     2.80s   trace_memory_usage (memory_profiler.py)\n",
-    "  0.00%   0.00%    2.36s     3.75s   <dictcomp> (pandas\\io\\json\\_normalize.py)\n",
-    "  0.00%   0.00%    1.07s     6.10s   _normalise_json_ordered (pandas\\io\\json\\_normalize.py)\n",
-    "  6.00%   6.00%   0.560s     1.14s   _list_of_dict_to_arrays (pandas\\core\\internals\\construction.py)\n",
-    "  0.00%   0.00%   0.490s    0.810s   _normalise_json (pandas\\io\\json\\_normalize.py)\n",
-    "  0.00%   0.00%   0.460s    0.570s   _preprocess_data (pandas\\io\\json\\_json.py)\n",
-    "  0.00%   0.00%   0.390s     6.81s   _simple_json_normalize (pandas\\io\\json\\_normalize.py)\n",
-    "  0.00%   0.00%   0.370s     8.38s   read (pandas\\io\\json\\_json.py)\n",
-    " 22.00%  22.00%   0.320s    0.340s   convert (pandas\\core\\internals\\construction.py)\n",
-    "  0.00%   0.00%   0.320s    0.710s   _combine_lines (pandas\\io\\json\\_json.py)\n",
-    "  5.00%   8.00%   0.290s    0.420s   _merge_blocks (pandas\\core\\internals\\managers.py)\n",
-    "  0.00%   0.00%   0.250s    0.250s   get_data (<frozen importlib._bootstrap_external>)\n",
-    "  0.00%   0.00%   0.250s    0.340s   <genexpr> (pandas\\io\\json\\_json.py)\n",
-    "  6.00%   6.00%   0.240s    0.240s   _stack_arrays (pandas\\core\\internals\\managers.py)\n",
-    "  0.00%   0.00%   0.230s    0.370s   <genexpr> (pandas\\core\\internals\\construction.py)\n",
-    "  0.00%   0.00%   0.220s    0.260s   _to_datetime_with_unit (pandas\\core\\tools\\datetimes.py)\n",
+    "  # Se está mostrando sólo la línea del tiempo de ejecución del programa\n",
+    " 43.00% 100.00%   0.430s    12.76s   <module> (q1_time.py)\n",
     "```\n",
     "\n",
     "## Resultado Memoria **q1_time.py**\n",
     "```bash\n",
+    "python -m memory_profiler q1_time.py 'C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json'\n",
+    "Filename: q1_time.py\n",
     "\n",
+    "Line #    Mem usage    Increment  Occurrences   Line Contents\n",
+    "=============================================================\n",
+    "     7     76.6 MiB     76.6 MiB           1   @profile\n",
+    "     8                                         def q1_time(file_path: str) -> List[Tuple[datetime.date, str]]:\n",
+    "     9                                             # Leer el alrchivo y convertirlo a Dataframe\n",
+    "    10   1533.6 MiB   1457.0 MiB           1       df = pd.read_json(file_path, lines=True)\n",
+    "    11\n",
+    "    12                                             # Se crean/editan los campos necesarios para la consulta\n",
+    "    13   1534.8 MiB      1.2 MiB           1       df['date'] = pd.to_datetime(df['date'])\n",
+    "    14   1540.2 MiB      5.4 MiB           1       df['date_convert'] = df['date'].dt.date\n",
+    "    15   1557.2 MiB     17.0 MiB           1       df['username'] = pd.json_normalize(df['user'])['username']\n",
+    "    16\n",
+    "    17                                             # tomamos las 10 fechas con mayor cantidad de tweets\n",
+    "    18   1557.3 MiB      0.1 MiB           1       top10_dates  = df.groupby(['date_convert']).size().reset_index(name='cant').sort_values(by='cant', ascending=False).head(10)\n",
+    "    19\n",
+    "    20                                             # para cada una de esas fechas, tomamos los usuarios con mas tweets\n",
+    "    21   1557.3 MiB      0.0 MiB           1       results = []\n",
+    "    22   1560.9 MiB     -0.8 MiB          11       for top_date in top10_dates['date_convert']:\n",
+    "    23   1560.9 MiB      2.8 MiB          10           results.append((top_date, df[df['date_convert'] == top_date].groupby('username').size().reset_index(name='cant').sort_values(by='cant', ascending=False).iloc[0]['username']))\n",
+    "    24\n",
+    "    25   1560.9 MiB      0.0 MiB           1       return results\n",
     "```\n",
     "\n",
     "## **q1_memory.py**\n",
     "\n",
     "## Resultado Tiempo **q1_memory.py**\n",
     "```bash\n",
+    "py-spy top -- python q1_memory.py 'C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json'     \n",
     "\n",
+    "\n",
+    "Collecting samples from '\"python\" q1_memory.py C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json' (python v3.8.10)\n",
+    "Total Samples 10100\n",
+    "GIL: 0.00%, Active: 100.00%, Threads: 1\n",
+    "\n",
+    "  %Own   %Total  OwnTime  TotalTime  Function (filename)\n",
+    "  # Se está mostrando sólo la línea del tiempo de ejecución del programa\n",
+    "  0.00% 100.00%    2.10s    99.05s   q1_memory (q1_memory.py)\n",
     "```\n",
     "\n",
     "## Resultado Memoria **q1_memory.py**\n",
     "```bash\n",
+    "python -m memory_profiler q1_memory.py 'C:\\Users\\indir\\Downloads\\tweets.json\\farmers-protest-tweets-2021-2-4.json'\n",
+    "Filename: q1_memory.py\n",
     "\n",
+    "Line #    Mem usage    Increment  Occurrences   Line Contents\n",
+    "=============================================================\n",
+    "     7     76.7 MiB     76.7 MiB           1   @profile\n",
+    "     8                                         def q1_memory(file_path: str) -> List[Tuple[datetime.date, str]]:\n",
+    "     9                                             # Leer el alrchivo y convertirlo a Dataframe\n",
+    "    10     76.7 MiB      0.0 MiB           1       df = pd.read_json(file_path, lines=True, chunksize=1000)\n",
+    "    11     76.7 MiB      0.0 MiB           1       top_dates_aggregated = {}\n",
+    "    12\n",
+    "    13    112.1 MiB   -186.5 MiB         119       for chunk in df:\n",
+    "    14                                                 # Se crean/editan los campos necesarios para la consulta\n",
+    "    15    112.1 MiB   -187.2 MiB         118           chunk['date'] = pd.to_datetime(chunk['date'])\n",
+    "    16    112.1 MiB   -187.2 MiB         118           chunk['date_convert'] = chunk['date'].dt.date\n",
+    "    17    112.1 MiB   -149.1 MiB         118           chunk['username'] = pd.json_normalize(chunk['user'])['username']\n",
+    "    18\n",
+    "    19                                                 # tomamos las 10 fechas con mayor cantidad de tweets\n",
+    "    20    112.1 MiB   -180.2 MiB         118           top10_dates = chunk.groupby(['date_convert']).size().reset_index(name='cant').sort_values(by='cant', ascending=False).head(10)\n",
+    "    21                                                 # si ya existe en aggregated, sumar, si no existe, comparar para decidir si se queda o no\n",
+    "    22    112.1 MiB   -357.7 MiB         248           for index, row in top10_dates.iterrows():\n",
+    "    23    112.1 MiB   -189.0 MiB         130               if row['date_convert'] in top_dates_aggregated:\n",
+    "    24    112.1 MiB   -176.9 MiB         117                   top_dates_aggregated[row['date_convert']] += row['cant']\n",
+    "    25                                                     else:\n",
+    "    26    111.3 MiB    -12.1 MiB          13                   top_dates_aggregated[row['date_convert']] = row['cant']\n",
+    "    27\n",
+    "    28    103.7 MiB     -8.4 MiB          27       top10_dates_aggregated = sorted(top_dates_aggregated.items(), key=lambda item: item[1], reverse=True)[:10]\n",
+    "    29\n",
+    "    30                                             # para cada una de esas fechas, tomamos los usuarios con mas tweets\n",
+    "    31    103.7 MiB      0.0 MiB           1       df = pd.read_json(file_path, lines=True, chunksize=1000)\n",
+    "    32    103.7 MiB      0.0 MiB           1       results = {}\n",
+    "    33    115.2 MiB   -118.6 MiB         119       for chunk in df:\n",
+    "    34    115.2 MiB   -122.4 MiB         118           chunk = chunk.reset_index()\n",
+    "    35    115.2 MiB   -122.4 MiB         118           chunk['date'] = pd.to_datetime(chunk['date'])\n",
+    "    36    115.2 MiB   -122.4 MiB         118           chunk['date_convert'] = chunk['date'].dt.date\n",
+    "    37    115.2 MiB   -117.6 MiB         118           chunk['username'] = pd.json_normalize(chunk['user'])['username']\n",
+    "    38    115.2 MiB  -1281.4 MiB        1298           for top_date, _ in top10_dates_aggregated:\n",
+    "    39    115.2 MiB  -1164.1 MiB        1180               date_users = chunk[chunk['date_convert'] == top_date].groupby('username').size().reset_index(name='cant').sort_values(by='cant', ascending=False)\n",
+    "    40    115.2 MiB  -1164.1 MiB        1180               if top_date in results:\n",
+    "    41    115.2 MiB  -1164.1 MiB        1170                   pass\n",
+    "    42                                                     else:\n",
+    "    43    108.9 MiB      0.0 MiB          10                   results[top_date] = {}\n",
+    "    44    115.2 MiB -55181.1 MiB       60057               for _, row in date_users.iterrows():\n",
+    "    45    115.2 MiB -56844.7 MiB       58877                   if row['username'] in results[top_date]:\n",
+    "    46    115.2 MiB -14552.1 MiB       14718                       results[top_date][row['username']] += row['cant']\n",
+    "    47                                                         else:\n",
+    "    48    115.2 MiB -39464.7 MiB       44159                       results[top_date][row['username']] = row['cant']\n",
+    "    49\n",
+    "    50    108.0 MiB     -7.2 MiB           1       results_aggregated = []\n",
+    "    51    108.2 MiB      0.0 MiB          11       for top_date, users in results.items():\n",
+    "    52    108.2 MiB      0.1 MiB       88328           top_user = sorted(users.items(), key=lambda item: item[1], reverse=True)[:1]\n",
+    "    53    108.2 MiB      0.0 MiB          10           results_aggregated.append((top_date, top_user[0][0]))\n",
+    "    54\n",
+    "    55    108.2 MiB      0.0 MiB           1       return results_aggregated\n",
     "```\n",
     "\n",
     "# 2. Los top 10 emojis más usados con su respectivo conteo.\n",
